@@ -1,7 +1,7 @@
 ## Interface: 80000
 ## Title: [Lib] IGAS
 ## Author: kurapica.igas@gmail.com
-## Version: v154
+## Version: v155
 ## Notes: In-game addon system
 ## URL: http://github.com/kurapica/IGAS
 ## DefaultState: Enabled
